--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,11 +7,13 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="19" />
-    
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
-    
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -20,12 +22,17 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".ScanBLEMainActivity"
-            android:label="@string/app_name" android:noHistory="true" android:screenOrientation="portrait">
+            android:label="@string/title_activity_scanble"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".BLEDeviceActivity"
+            android:label="@string/title_activity_bledevice" >
         </activity>
     </application>
 
