--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".ScanBLEMainActivity"
-            android:label="@string/title_activity_scanble"
+            android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
